--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.7.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -105,6 +106,9 @@ flutter:
     - family: fonthead4
       fonts:
         - asset: assets/fonts/Acme-Regular.ttf
+    - family: roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
